# nbt-parser

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  nbtp-config-version.cmake.in  nbtp-config.cmake.in  nbtp.sln
boost_tests/: BasicParseTest.cpp  CMakeLists.txt  FloatTest.cpp  MultiTagTest.cpp  NestedParseTest.cpp  PtrTest.cpp  RealParseTest.cpp  TagTest.cpp  UnparseTest.cpp  memstream.h
boost_tests/test_data/: CMakeLists.txt  simple.nbt
include/: ByteTag.h  CMakeLists.txt  CompoundTag.h  Conversion.h  IntTag.h  ListTag.h  Logging.h  LongTag.h  ShortTag.h  Tag.h  TagIO.h  WindowsHacks.h  constants.h  conv.h  libnbtp.h
include/tags/: ByteTag.h  BytesTag.h  CMakeLists.txt  CompoundTag.h  DoubleTag.h  FloatTag.h  IntTag.h  IntsTag.h  ListTag.h  LongTag.h  LongsTag.h  NumberTag.h  ShortTag.h  SingleValuedTag.h  StringTag.h  Tag.h
pkgconfig/: CMakeLists.txt  nbtp-config.cmake.in  nbtp.pc.in
pynbtp/: CMakeLists.txt  PyBytesBuf.cpp  PyBytesBuf.h  pynbtp.cpp  pynbtp.pyi
python/: pynbtp.cpp
src/: ByteTag.cpp  CMakeLists.txt  CompoundTag.cpp  CompoundTag.h  Conversion.cpp  IntTag.cpp  ListTag.cpp  Logging.cpp  LongTag.cpp  ShortTag.cpp  Tag.cpp  Tag.h  TagIO.cpp  compound.c  compound.h  conv.cpp  errmsg.h  exception.cpp  exception.h  io.h  libnbtp.h  nbtp-cli.cpp  nbtp.c  nbtp.cpp  nbtp.h  parser.c  parser.cpp  parser.h  tag.c  tag.cpp  tag.h  util.c  util.h
src/tags/: ByteTag.cpp  BytesTag.cpp  CompoundTag.cpp  DoubleTag.cpp  FloatTag.cpp  IntTag.cpp  IntsTag.cpp  ListTag.cpp  LongTag.cpp  LongsTag.cpp  ShortTag.cpp  StringTag.cpp  Tag.cpp
tests/: BasicParseTest.cpp  CMakeLists.txt  ContainerTagTest.cpp  FloatBigEndianTest.cpp  FormatterTest.cpp  RealParseTest.cpp  SingleValuedTagTest.cpp  TagTest.cpp  UnparseTest.cpp  map_101.nbt  simplelist.nbt  wrongsize.nbt
tests/test_data/: CMakeLists.txt  Player.nbt  World.nbt
tests/test_data/unused/: listendtype.nbt  negativesize.nbt
vs-nbtp/: nbtp.vcxproj  nbtp.vcxproj.filters
vs-nbtp-cli/: nbtp-cli.vcxproj  nbtp-cli.vcxproj.filters
