pybind11_add_module(pynbtp MODULE THIN_LTO pynbtp.cpp PyBytesBuf.h)
if (WIN32)
	target_link_libraries(pynbtp PRIVATE nbtp-static)
else()
	target_link_libraries(pynbtp PUBLIC nbtp)
endif()
install(TARGETS pynbtp DESTINATION ${PYTHON_MODULES_DIR})
install(FILES pynbtp.pyi DESTINATION ${PYTHON_MODULES_DIR})